// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should mount without errors 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Button
    buttonType="PRIMARY"
    label="Follow"
    size="SMALL"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "buttonType": "PRIMARY",
      "label": "Follow",
      "size": "SMALL",
    },
    "ref": null,
    "rendered": Object {
      "instance": <button
        class="button primary small"
      >
        Follow
      </button>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Follow",
        "className": "button primary small",
      },
      "ref": null,
      "rendered": Array [
        "Follow",
      ],
      "type": "button",
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "buttonType": "PRIMARY",
        "label": "Follow",
        "size": "SMALL",
      },
      "ref": null,
      "rendered": Object {
        "instance": <button
          class="button primary small"
        >
          Follow
        </button>,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Follow",
          "className": "button primary small",
        },
        "ref": null,
        "rendered": Array [
          "Follow",
        ],
        "type": "button",
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<Button /> should render without errors 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "button primary small",
    },
    "children": Array [
      Object {
        "data": "Follow",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "text",
      },
    ],
    "name": "button",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`<Button /> should shallow without errors 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    buttonType="PRIMARY"
    label="Follow"
    size="SMALL"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Follow",
      "className": "button primary small",
    },
    "ref": null,
    "rendered": "Follow",
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Follow",
        "className": "button primary small",
      },
      "ref": null,
      "rendered": "Follow",
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
